--- a/src/styles/theme-variables.scss
+++ b/src/styles/theme-variables.scss
@@ -2,16 +2,16 @@
 
 $themes: (
     light: (
-        colorHeaderFooter: #fff,
-        colorText: #000,
-        colorBackground: #f8f8fa,
+        colorHeaderFooter: #E5E5E5,
+        colorText: #333333,
+        colorBackground: #E5E5E5,
         toggleBackground: #dfe4ea,
     ),
     dark: (
-        colorHeaderFooter: #36394c,
-        colorText: #eff2f7,
-        colorBackground: #222736,
-        toggleBackground: #606071,
+        colorHeaderFooter: #333333,
+        colorText: #FBF8F1,
+        colorBackground: #333333,
+        toggleBackground: #F5F5F5,
     ),
 );
 
