--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,14 +1,8 @@
-.content-wrapper {
-  max-width: 1500px;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  padding: 30px;
-  display: flex;
-  img {
-    width: auto;
-    margin: auto;
-    max-height: 200px;
-    height: 100%;
+@import '../styles/theme-variables.scss';
+
+body {
+  margin: 0; padding: 4px;
+  @include themify($themes) {
+    background: themed('colorBackground');
   }
 }
