--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,8 +1,20 @@
 @import '../styles/theme-variables.scss';
+// theme-fonts
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@font-face {
+  font-family: "Gerbil";   /*Can be any text*/
+  src: local("Gerbil"),
+    url("../fonts/Gerbil.otf") format("opentype");
+}
 
 body {
   margin: 0; padding: 4px;
+  font-family: 'Lato', sans-serif;
   @include themify($themes) {
     background: themed('colorBackground');
   }
+}
+
+h1, h2, h3 {
+  font-family: 'Gerbil', sans-serif;
 }
