--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,13 +8,31 @@
     url("../fonts/Gerbil.otf") format("opentype");
 }
 
+:root{
+  --colorText: #333333;
+  --background: #E5E5E5;
+  --toggleBackground: #dfe4ea;
+  background-color: #333333;
+}
+
+[data-theme="dark"] {
+  --colorText: #FBF8F1;
+  --background: #333333;
+  --toggleBackground: #F5F5F5;
+}
+
 body {
   margin: 0; padding: 4px;
   font-family: 'Lato', sans-serif;
+  background-color: var(--background);
+  color: var (--colorText);
+}
+
+/**.themify-theme{
   @include themify($themes) {
     background: themed('colorBackground');
   }
-}
+}**/
 
 h1, h2, h3 {
   font-family: 'Gerbil', sans-serif;
