--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,12 +1,13 @@
-@import '../styles/theme-variables.scss';
+//@import '../styles/theme-variables.scss';
+@import './App.scss';
 
 /*Header styles*/
 .header {
   padding: 10px;
   z-index: 99;
-  @include themify($themes) {
+  /*@include themify($themes) {
     background: themed('colorHeaderFooter');
-  }
+  }*/
   .header-content {
     margin: auto;
     display: flex;
@@ -15,9 +16,9 @@
       text-decoration: none;
       display: flex;
       width: inherit;
-      @include themify($themes) {
+      /*@include themify($themes) {
         color: themed('colorText');
-      }
+      }*/
       font-weight: 600;
       text-transform: uppercase;
       img {
@@ -38,71 +39,6 @@
           color: white;
           padding: 0 12px;
         }
-      }
-    }
-    .toggle-btn-section {
-      margin: auto 0 auto auto;
-      .toggle-checkbox {
-        justify-content: center;
-        display: inline-flex;
-        align-items: center;
-        cursor: pointer;
-
-        .toggle-btn__input {
-          height: 0;
-          width: 0;
-          visibility: hidden;
-        }
-
-        .toggle-btn__input-label {
-          cursor: pointer;
-          text-indent: -9999px;
-          width: 46px;
-          height: 20px;
-          display: block;
-          border-radius: 23px;
-          position: relative;
-          border: none;
-          margin-top: 2px;
-
-          @include themify($themes) {
-            background-color: themed('toggleBackground');
-          }
-
-          &::after {
-            content: '?';
-            position: absolute;
-            top: 3px;
-            left: 3px;
-            width: 14px;
-            height: 14px;
-            border-radius: 50%;
-            transition: 0.3s;
-            box-shadow: 0 5px 10px rgba(153, 153, 153, 0.4);
-            background-color: #333;
-          }
-        }
-
-        .toggle-btn__input:checked ~ .toggle-btn__input-label {
-          &:after {
-            background: #F5F5F5;
-            left: calc(100% - 3px);
-            transform: translateX(-100%);
-          }
-        }
-
-        .toggle-btn__input:checked ~ .toggle-btn__theme {
-          &:after {
-            // theme switch circle background in light theme
-            background: #F5F5F5;
-            left: calc(100% - 3px);
-            transform: translateX(-100%);
-          }
-        }
-      }
-
-      .toggle-btn__input:checked ~ .toggle-btn__input-label {
-        background-color: #333;
       }
     }
   }
