--- a/src/styles/theme-variables.scss
+++ b/src/styles/theme-variables.scss
@@ -36,3 +36,70 @@ $themes: (
 @function themed($key) {
     @return map-get($theme-map, $key)
 }
+
+.toggle-btn-section {
+    margin: auto 0 auto auto;
+    .toggle-checkbox {
+      justify-content: center;
+      display: inline-flex;
+      align-items: center;
+      cursor: pointer;
+
+      .toggle-btn__input {
+        height: 0;
+        width: 0;
+        visibility: hidden;
+      }
+
+      .toggle-btn__input-label {
+        cursor: pointer;
+        text-indent: -9999px;
+        width: 46px;
+        height: 20px;
+        display: block;
+        border-radius: 23px;
+        position: relative;
+        border: none;
+        margin-top: 2px;
+
+        @include themify($themes) {
+          background-color: themed('toggleBackground');
+        }
+
+        &::after {
+          content: '?';
+          position: absolute;
+          top: 3px;
+          left: 3px;
+          width: 14px;
+          height: 14px;
+          border-radius: 50%;
+          transition: 0.3s;
+          box-shadow: 0 5px 10px rgba(153, 153, 153, 0.4);
+          background-color: #333;
+        }
+      }
+
+      .toggle-btn__input:checked ~ .toggle-btn__input-label {
+        &:after {
+          background: #F5F5F5;
+          left: calc(100% - 3px);
+          transform: translateX(-100%);
+        }
+      }
+
+      .toggle-btn__input:checked ~ .toggle-btn__theme {
+        &:after {
+          // theme switch circle background in light theme
+          background: #F5F5F5;
+          left: calc(100% - 3px);
+          transform: translateX(-100%);
+        }
+      }
+    }
+
+    .toggle-btn__input:checked ~ .toggle-btn__input-label {
+      background-color: #333;
+    }
+  }
+
