--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,3 @@
-@import '../styles/theme-variables.scss';
-
 // theme-fonts
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 @font-face {
@@ -21,19 +19,36 @@
   --toggleBackground: #F5F5F5;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0; padding: 4px;
   font-family: 'Lato', sans-serif;
   background-color: var(--background);
   color: var (--colorText);
+  margin: 0; padding: 0;
 }
-
-/**.themify-theme{
-  @include themify($themes) {
-    background: themed('colorBackground');
-  }
-}**/
 
 h1, h2, h3 {
   font-family: 'Gerbil', sans-serif;
+}
+
+select {
+  background-color: transparent;
+  border: none;
+  padding: 0 1em 0 0;
+  margin: 0;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: inherit;
+  line-height: inherit;
+  outline: none;
+}
+
+select::-ms-expand {
+  display: none;
 }
