--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -21,7 +21,7 @@
       h4{
          font-family: 'Lato', sans-serif;
          font-weight: 400;
-         font-size: 30px;
+         font-size: 20px;
       }
       button{
          padding: 18px 28px;
@@ -42,5 +42,31 @@
          transform: translateY(4px);
       }
     }
+   }
+
+   .welcome{
+      display: flex;
+      //flex-flow: row-reverse wrap;
+      align-content: stretch;
+      align-items: center;
+      justify-content: space-between;
+      gap: 4%;
+      margin-top: 4%;
+      padding: 4%;
+      .welcome-text{
+         flex-grow: 1;
+         padding: 0 2%;
+         color: var(--colorText);
+         h2{
+            color: #EA0000;
+            font-size: 30px;
+         }
+      }
+      .welcome-img{
+         img{
+            width: 500px;
+            height: auto;
+         }
+      }
    }
 }
