text decoration animation

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -69,4 +69,30 @@
          }
       }
    }
+
+   .text-anima{
+      .animation-text{
+         white-space: nowrap;
+         overflow: hidden;
+         display: inline-block;
+         animation: marquee 50s linear infinite;
+
+         h2{
+            color: var(--colorText);
+            font-size: 12vh;
+            padding: 0;
+            margin: 0;
+            display: inline-block;
+         }
+   
+         @keyframes marquee {
+            0% {
+              transform: translate3d(0, 0, 0);
+            }
+            100% {
+              transform: translate3d(-50%, 0, 0);
+            }
+          }
+      }
+   }
 }
