--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -95,4 +95,33 @@
           }
       }
    }
+
+   .work-section{
+      width: 100%;
+      margin: 4% auto;
+      .section{
+         display: flex;
+         justify-content: center;
+         align-content: center;
+         text-align: center;
+         gap: 71px;
+         .work-card{
+            width: 25%;
+            padding: 3%;
+            margin-bottom: 4%;
+            background-color: #F5F5F5;
+            border-radius: 12px;
+            box-shadow: 6px 4px 33px rgba(0, 0, 0, 0.2);
+            h4{
+               font-family: 'Lato', sans-serif;
+               font-weight: 300;
+               font-size: 25px;
+            }
+            img{
+               width: 60%;
+               height: auto;
+            }
+         }
+      }
+   }
 }
