--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -23,6 +23,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  
 }
 
 body {
@@ -30,10 +31,25 @@ body {
   background-color: var(--background);
   color: var (--colorText);
   margin: 0; padding: 0;
+  overflow-x: hidden;
 }
 
 h1, h2, h3 {
   font-family: 'Gerbil', sans-serif;
+}
+
+h2{
+  color: #EA0000;
+  font-size: 30px;
+}
+
+a{
+  color: var(--colorText);
+}
+
+a:hover{
+  color:#EA0000;
+  cursor: pointer;
 }
 
 select {
