--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,22 +2,20 @@
 
 .home{
    margin: auto;
-   padding: 0 4%;
+
    .hero{
+    padding: 0 4%;
     text-align: center;
     h1{
-      font-size: 8vh;
-      margin-bottom: -4px;
-      text-shadow: rgb(105, 105, 105) 1px 0 10px;
+      font-size: 10vh;
+      margin-bottom: 14px;
       color: var(--colorText);
     }
     .hero-dis{
-      background-image: url('../assets/hero.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      height: 70vh;
-      padding: 4%;
+      background-color: #EAEAEA;
+      border-radius: 15px;
+      height: 60vh;
+      padding: 1% 4%;
       h4{
          font-family: 'Lato', sans-serif;
          font-weight: 400;
@@ -57,10 +55,7 @@
          flex-grow: 1;
          padding: 0 2%;
          color: var(--colorText);
-         h2{
-            color: #EA0000;
-            font-size: 30px;
-         }
+         width: 40vw;
       }
       .welcome-img{
          img{
@@ -99,6 +94,7 @@
    .work-section{
       width: 100%;
       margin: 4% auto;
+      padding: 0 4%;
       .section{
          display: flex;
          justify-content: center;
@@ -122,6 +118,49 @@
                height: auto;
             }
          }
+      }
+   }
+
+   .team-section{
+      display: flex;
+      align-content: stretch;
+      justify-content: space-around;
+      align-items: center;
+      padding: 0 4%;
+      margin-bottom: 4%;
+      .members{
+         display: flex;
+         padding: 20px;
+         gap: 30px;
+         img{
+            width: 130px;
+            height: auto;
+            margin: -30% 0 0 0;
+         }
+         .member-card{
+            text-align: center;
+            width: 180px;
+            height: 250px;
+            padding: 20px;
+            background-color: #F5F5F5;
+            box-shadow: 6px 4px 33px rgba(0, 0, 0, 0.2);
+            border-radius: 12px;
+         }
+      }
+      .team-text{
+         width: 40vw;
+         color: var(--colorText);
+      }
+   }
+
+   .ctaSection{
+      display: flex;
+      padding: 4%;
+      width: 50vw;
+      color: var(--colorText);
+      h3{
+         font-weight: 300;
+         color: #666;
       }
    }
 }
