--- a/src/styles/Animations.scss
+++ b/src/styles/Animations.scss
@@ -2,7 +2,8 @@
     img{
         width: 80vw;
         height: auto;
-        margin-top: -30%;
+        margin-top: -50vh;
+        z-index: -1;
     }
 
 }
